--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
 		"express-fileupload": "^1.4.0",
 		"express-flash": "^0.0.2",
 		"express-session": "^1.17.2",
+		"googleapis": "^126.0.1",
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.29.1",
 		"multer": "^1.4.5-lts.1",
