--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@faker-js/faker": "^8.1.0",
 		"@reduxjs/toolkit": "^1.9.3",
 		"bcrypt": "^5.0.1",
 		"body-parser": "^1.19.1",
